[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/sword.png" type="Texture" id=1]
[ext_resource path="res://scripts/sword.gd" type="Script" id=2]
[ext_resource path="res://sprites/light.png" type="Texture" id=3]
[ext_resource path="res://audio/sounds/die.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sounds/hit.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sounds/throw.wav" type="AudioStream" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.42727, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.08982
height = 10.9535

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.51074
height = 14.4375

[node name="sword" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 2 )

[node name="end_particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.75
one_shot = true
speed_scale = 0.75
explosiveness = 1.0
randomness = 1.0
local_coords = false
direction = Vector2( 0, -1 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )
color = Color( 0.486275, 0.713726, 0.85098, 1 )
hue_variation = 0.01
hue_variation_random = 1.0

[node name="move_particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.75
speed_scale = 0.75
randomness = 1.0
local_coords = false
direction = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )
color = Color( 0.486275, 0.713726, 0.85098, 1 )
hue_variation = 0.01
hue_variation_random = 1.0

[node name="collider" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="sprites" type="Node2D" parent="."]
rotation = 1.5708

[node name="shadow" type="Sprite" parent="sprites"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="sprites"]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0.222733, 0 )
scale = Vector2( 15, 15 )
texture = ExtResource( 3 )
energy = 0.8
shadow_enabled = true
shadow_color = Color( 1, 1, 1, 0 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 20, 0 )
width = 1.0
default_color = Color( 0.498039, 0, 0.615686, 1 )

[node name="wall_collider" type="Area2D" parent="."]
collision_mask = 10

[node name="collider" type="CollisionShape2D" parent="wall_collider"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="throw" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
[connection signal="body_entered" from="wall_collider" to="." method="_on_wall_collider_body_entered"]
[connection signal="body_exited" from="wall_collider" to="." method="_on_wall_collider_body_exited"]
